Fix getAllAssets: add historyImages and relepedAudio fields
Original TS returns two extra fields per asset that were missing:
- historyImages: completed images for the asset (o_image where assetsId=asset.id and state=已完成)
- relepedAudio: bound audio assets from o_assetsRole2Audio join o_assets
Also add promptState, promptErrorReason, remark, assetsId to response map.

https://claude.ai/code/session_01NPRfAcmeBtKveicCzE8UoM